# capturing_opportunities_capstone

./: .gitignore  README.md
.github/workflows/: ci.yaml
analytics/: SUS Survey.csv  correlated_data.csv  logs.json  main.py  make_charts.py  pyproject.toml  survey.csv
backend/: .gitignore  Dockerfile  SETUP.md  pyproject.toml
backend/app/: auth.py  config.py  logger.py  main.py  middleware.py
backend/app/routers/: models.py  uploads.py
backend/app/services/: auto_encoder.py  base.py  svm.py
fastapi_app/: Dockerfile  README.md  app.db  main.py  pyproject.toml
fastapi_app/app/: config.py  crud.py  database.py  logger.py  main.py  models.py  schemas.py
fastapi_app/app/routers/: models.py  uploads.py
fastapi_app/app/services/: auto_encoder.py  svm.py
flask_app/: .gitignore  README.md  SETUP.md  app.py  forms.py  pyproject.toml  setup.sh
flask_app/cap_opp/: __init__.py  app.py  config.py
flask_app/cap_opp/forms/: image_forms.py
flask_app/cap_opp/models/: scored_paths.py
flask_app/cap_opp/services/: auto_encoder.py  base.py  ml_service.py  svm.py
flask_app/cap_opp/templates/: about.html  about.jinja2  base.html  base.jinja2  index.html  index.jinja2  processed_images.html  processed_images.jinja2
flask_app/cap_opp/views/: about.py  image_grouping.py  main.py
flask_app/instance/: example.db
flask_app/templates/: base.html  index.html
frontend/: .env.development  .env.production  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...endpoint]/: route.ts
frontend/app/components/: upload-section.tsx
jupyter_lab/poc/: .gitignore  README.md  poc_1_single_class.ipynb  poc_2_single_class_augmented.ipynb  poc_3_two_class.ipynb  poc_5_autoencoder.ipynb  requirements.txt
jupyter_lab/practice/transfer_learning_fine_tuning/guide/: guide.ipynb  requirements.txt
jupyter_lab/practice/transfer_learning_fine_tuning/tutorial/: requirements.txt  tutorial.ipynb
react_frontend/app/api/[...endpoint]/: route.ts
react_frontend/app/model/: model.ts
react_frontend/app/service/: use-upload-files.ts
react_frontend/react-frontend/: package-lock.json  package.json
react_frontend/react-frontend/app/: globals.css  page.tsx
react_frontend/react-frontend/app/components/: upload-section.tsx
svelte_app/cap_opp/: package.json  pnpm-lock.yaml
svelte_app/cap_opp/src/lib/: copy_lib.ts  index.ts  ml-lib.ts  types.ts
svelte_app/cap_opp/src/routes/: +page.svelte  ImageGrid.svelte
terraform/: .env  cdktf.json  main.ts  package-lock.json  package.json
