[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Antonio Zea Jr <zeajantonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
numpy = "^1.26.4"
pillow = "^10.2.0"
pydantic-settings = "^2.2.1"
python = "^3.11"
python-multipart = "^0.0.9"
scikit-learn = "^1.4.1.post1"
structlog = "^24.1.0"
tensorflow = "^2.16.1"
uvicorn = "^0.28.0"
tensorflowjs = "^4.17.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
prospector = "^1.10.3"
pytest = "^8.1.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
