[tool.poetry]
name = "cap_opp"
version = "0.1.0"
description = ""
authors = ["Antonio Zea Jr <zeajantonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
flask = "^2.3.3"
structlog = "^23.1.0"
flask-wtf = "^1.1.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
tensorflow = "^2.14.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
prospector = "^1.10.2"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
